testsuite/tests/layout_poly/use_mli_static_default_bad.reference
File "use_mli_static_default_bad.ml", line 18, characters 20-47:
18 | let () = use_static Mli_with_static_default.bar
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This value is "dynamic" but is expected to be "static".
